--- a/style/board.css
+++ b/style/board.css
@@ -52,12 +52,12 @@ body{
      justify-content: center;
  }
 
- table {
+.tablecontainer table {
      border-collapse: collapse;
      width: var(--boardWith);
  }
 
- tr {
+.tablecontainer tr {
      display: flex;
      height: 430px;
  }
@@ -66,7 +66,7 @@ body{
     height: unset !important;
  }
 
- td {
+.tablecontainer td {
      display: flex;
      flex-wrap: wrap;
      align-content: flex-start;
@@ -74,7 +74,7 @@ body{
      width: 100%;
  }
 
- td div {
+.tablecontainer td div {
      height: 215px;
      width: 252px;
      border: 2px solid black;
