--- a/templates/header.html
+++ b/templates/header.html
@@ -1,18 +1,14 @@
+<link rel="stylesheet" href="../style/standard.css">
 <header class="header">
   <div class="header-title">Kanban Project Management Tool</div>
   
   <div class="header-right">
     <button class="header-help-btn" type="button" aria-label="Help">
-      <svg class="header-icon" viewBox="0 0 32 32">
-        <rect width="32" height="32" rx="16" fill="#D9D9D9"/>
-        <path d="M16 12a4 4 0 0 0-4 4h2a2 2 0 1 1 2 2v2h2v-2a4 4 0 0 0 4-4 4 4 0 0 0-4-4zm-1 10h2v2h-2v-2z" fill="#A8A8A8"/>
-      </svg>
+      <img class="header-icon" src="./assets/img/help.svg" alt="Help">
     </button>
     
-    <button class="header-profile-btn" type="button" aria-label="User profile">
-      <div class="profile-circle">
-        <span class="profile-initials">SM</span>
-      </div>
+    <button class="circleBadge" type="button" aria-label="User profile">
+        <span>SM</span>
     </button>
   </div>
 </header>
