--- a/style/add-Task.css
+++ b/style/add-Task.css
@@ -145,13 +145,17 @@ h2 {
   margin-top: 4px;
 }
 
+.SubTaskField {
+  color: black;
+}
+
 .requiredField.visible {
   color: rgba(230, 0, 38, 1); /* sichtbar wenn Klasse .visible */
 }
 
 .contentWrapper {
   display: flex;
-  gap: 60px;
+  gap: 48px;
 }
 
 h1 {
@@ -226,7 +230,7 @@ h1 {
   cursor: pointer;
 }
 .inputField {
-  width: 418px;
+  width: 415px;
   max-height: 44px;
 }
 
@@ -243,8 +247,7 @@ h1 {
 .buttonRequiredField {
   display: flex;
   justify-content: space-between;
-  width: 100%;
-  width: 1006px;
+  width: 976px;
   margin-top: 129px;
 }
 .requiredBottomLeft {
@@ -283,30 +286,42 @@ h1 {
 }
 .subtaskInputContainer {
   position: relative;
-  width: 100%;
+  width: fit-content; /* passt sich deiner festen Input-Breite an */
 }
-
-.subtaskInputContainer input {
-  padding-right: 60px; /* Platz für Icons */
-}
-
 .subtaskIcon {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
   cursor: pointer;
   font-size: 16px;
   user-select: none;
+  opacity: 0;
+  transition: opacity 0.2s ease;
 }
 
-.subtaskIcon.check {
-  right: 32px;
-  color: green;
+.subTaskIconsContainer {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-.subtaskIcon.close {
-  right: 10px;
-  color: red;
+.spacer {
+  width: 1px;
+  height: 23px;
+  background-color: rgba(209, 209, 209, 1);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s ease;
+}
+
+.subtaskInputContainer:focus-within .spacer {
+  opacity: 1;
+  pointer-events: auto;
+}
+.subtaskInputContainer:focus-within .subtaskIcon {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .subtaskIcon:hover {
@@ -314,10 +329,7 @@ h1 {
 }
 
 .subtaskItem {
-  margin-top: 6px;
-  padding: 6px 10px;
-  background: #f6f6f6;
-  border-radius: 6px;
+  font-size: 18px;
 }
 
 @media (max-width: 1100px) {
@@ -514,8 +526,25 @@ h1 {
   .buttonRequiredField {
     width: 267px;
     margin-top: 5px;
+    flex-direction: column;
   }
   main {
-    padding: 0 11px;
+    padding: 0 15px;
+  }
+  .taskButton {
+    margin-top: 25px;
+    justify-content: end;
+  }
+  .createButton {
+    width: 123px;
+    height: 43px;
+    align-items: center;
+    gap: 3px;
+    font-size: 16px;
+  }
+  .clearButton {
+    width: 89px;
+    height: 43px;
+    font-size: 16px;
   }
 }
