--- a/style/add-Task.css
+++ b/style/add-Task.css
@@ -330,8 +330,14 @@ h1 {
 
 .subtaskItem {
   font-size: 18px;
+  display: flex;
+  justify-content: space-between;
 }
 
+.subTaskList {
+  padding: 0;
+  width: 824px;
+}
 @media (max-width: 1100px) {
   .contentWrapper {
     flex-direction: column;
