--- a/style/taskDetail.css
+++ b/style/taskDetail.css
@@ -1,28 +1,84 @@
 /* dialog open/close*/
+dialog{
+    transform: translateX(calc(100vh + 200px));
+}
 dialog.opend {
-
-    transition: all 1s ease-in;
-
+    transform: translateX(0px);
+    transition: all 0.1s ease-in;
 }
 
 dialog.closed {
-
-    transition: all 1s ease-in;
+    transform: translateX(calc(100vh + 200px));
+    transition: all 0.1s ease-in;
 }
 
 dialog::backdrop {
     opacity: 0;
     background-color: rgb(0, 0, 0);
-    transition: all 0.5s ease-in;
+    transition: all 0.1s ease-in;
 }
 
 dialog.opend::backdrop {
     opacity: 0.7;
-    transition: all 0.5s ease-in;
+    transition: all 0.1s ease-in;
     cursor: pointer;
 }
 
 dialog.closed::backdrop {
     opacity: 0;
     transition: all 0.5s ease-in;
+}
+
+.allTaskDetails{
+    border-radius: 30px;
+    
+}
+
+.allTaskDetails header section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.allTaskDetails h1{
+    font-size: 61px;
+}
+
+
+.allTaskDetails h2{
+    font-size: 24px;
+    color: var(--GlobalBlue);
+}
+
+
+.closeDialogX{
+    cursor: pointer;
+    width: 20px;
+    text-align: center;
+}
+
+.closeDialogX:hover{
+    background-color: var(--CircleBadgeGray);
+    border-radius: 50%;
+    width: 20px;
+}
+
+.taskDetailsIcons{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: var(--GlobalBlue);
+}
+
+.taskDetailsIcons:hover{
+    color: var(--GlobalLightBlue);
+    cursor: pointer;
+}
+
+.taskDetailsIcons img{
+    height: 20px;
+}
+
+.taskDetailsIcons .edit{
+    border-left: 1px #D1D1D1 solid;
 }
