--- a/style/add-Task.css
+++ b/style/add-Task.css
@@ -328,16 +328,77 @@ h1 {
   opacity: 0.7;
 }
 
-.subtaskItem {
-  font-size: 18px;
-  display: flex;
-  justify-content: space-between;
+.subTaskItem {
 }
 
-.subTaskList {
-  padding: 0;
-  width: 824px;
+.subTaskContent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+.subTaskItem:hover {
+  background-color: rgba(240, 240, 240, 1);
+}
+
+.Edit {
+  opacity: 1;
+}
+
+.subTaskActions {
+  display: flex;
+  gap: 8px;
+  cursor: pointer;
+}
+
+.subTaskEditInput {
+  width: 390px;
+  height: 31px;
+  border: none;
+  border-bottom: 1px solid #7cf0ff;
+  outline: none;
+}
+
+.subTaskEditIcons {
+  display: flex;
+  position: relative;
+  right: 10%;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.subTaskEditContainer {
+  display: flex;
+  align-items: center;
+}
+
+.toast {
+  position: fixed;
+  left: 50%;
+  bottom: -100px; /* startet unsichtbar */
+  transform: translateX(-50%);
+  background-color: rgba(42, 54, 71, 1);
+  color: white;
+  padding: 16px 32px;
+  border-radius: 12px;
+  font-size: 20px;
+  font-weight: 500;
+  opacity: 0;
+  transition: all 0.4s ease;
+  z-index: 9999;
+}
+
+/* Sichtbarer Zustand */
+.toast.show {
+  bottom: 50%;
+  transform: translate(-50%, 50%);
+  opacity: 1;
+}
+
+.subtaskEditNote {
+  font-size: 18px;
+}
+
 @media (max-width: 1100px) {
   .contentWrapper {
     flex-direction: column;
