--- a/style/header.css
+++ b/style/header.css
@@ -9,7 +9,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 40px;
+  padding: 20px 40px 20px 340px;
   gap: 34px;
   background: #FFFFFF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
@@ -43,7 +43,7 @@
   padding: 0px;
   gap: 16px;
   
-  margin-left: 0 auto;
+  margin-left: auto;
   width: 104px;
   height: 56px;
   
@@ -92,9 +92,10 @@
   height: 14.24px;
   color: #29ABE2;
   font-family: 'Inter', sans-serif;
-  font-weight: bold;
-  font-size: 12px;
-  
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 20px;
+  letter-spacing: 0.5px;
   display: flex;
   align-items: center;
   justify-content: center;
