--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../style/standard.css">
+<!-- <link rel="stylesheet" href="../style/standard.css"> -->
 <header class="header">
   <div class="header-title">Kanban Project Management Tool</div>
   
