--- a/style/standard.css
+++ b/style/standard.css
@@ -4,12 +4,13 @@
  * Usage: Reference via var(--token) across components and states.
  */
 :root {
-    --globalBlue: #2A3647;
+    --GlobalBlue: #2A3647;
     --GlobalWhite: #FFFFFF;
     --GlobalBackgroundWhite: #F6F7F8;
     --GlobalLightBlue: #29ABE2;
     --GlobalDarkblue: #091931;
     --CircleBadgeGray: #0C2E621F;
+    --GlobalBorderColorGray:#A8A8A8;
 
     /* Layout */
     --sidebar-w: 232px;
@@ -90,7 +91,7 @@ html {
 
 .ButtonBlueFilled {
     border-radius: 10px;
-    background-color: var(--globalBlue);
+    background-color: var(--GlobalBlue);
     color: var(--GlobalWhite);
     padding: 12px 16px 12px 16px;
     font-size: 21px;
@@ -102,8 +103,8 @@ html {
     background-color: var(--GlobalWhite);
     padding: 12px 16px 12px 16px;
     font-size: 21px;
-    border: 1px solid var(--globalBlue);
-    color: var(--globalBlue);
+    border: 1px solid var(--GlobalBlue);
+    color: var(--GlobalBlue);
 }
 
 .ButtonDarkBlueFilled {
@@ -142,7 +143,7 @@ html {
  * Colors: Outline --globalBlue, text --GlobalLightBlue, background --GlobalWhite.
  */
 .circleBadge {
-    border: solid 3px var(--globalBlue);
+    border: solid 3px var(--GlobalBlue);
     border-radius: 50%;
     height: 48px;
     width: 48px;
