--- a/style/header.css
+++ b/style/header.css
@@ -77,6 +77,7 @@
   border: 3px solid #2A3647;
   background: #FFFFFF;
   border-radius: 50%;
+  cursor: pointer;
   
   display: flex;
   justify-content: center;
