checkbox for subtask added, render Sub Tasks

--- a/style/taskDetail.css
+++ b/style/taskDetail.css
@@ -84,3 +84,11 @@ dialog.closed::backdrop {
 .taskDetailsIcons .edit{
     border-left: 1px #D1D1D1 solid;
 }
+
+.subTasks{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
