--- a/style/standard.css
+++ b/style/standard.css
@@ -4,7 +4,6 @@
  * Usage: Reference via var(--token) across components and states.
  */
 :root {
-    --globalBlue: #2A3647;
     --GlobalBlue: #2A3647;
     --GlobalWhite: #FFFFFF;
     --GlobalBackgroundWhite: #F6F7F8;
@@ -12,6 +11,9 @@
     --GlobalDarkblue: #091931;
     --CircleBadgeGray: #0C2E621F;
     --GlobalBorderColorGray:#A8A8A8;
+
+    /* Task*/
+    --taskLightBlue: #0038FF;
 
     /* Layout */
     --sidebar-w: 232px;
@@ -164,4 +166,23 @@ html {
     background-color: var(--CircleBadgeGray);
 }
 
+/* THIS is the round initials circle (JS uses .badge) */
+.badge {
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  border: 2px solid #FFFFFF;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 120%;
+  color: #FFFFFF;
+
+  flex: none;
+}
 
