--- a/style/standard.css
+++ b/style/standard.css
@@ -92,6 +92,23 @@ html {
     font-family: 'Inter';
 }
 
+/**font sizes */
+
+h1{
+    font-size: 61px;
+    color: #000000;
+    font-weight: bold;
+}
+
+h2{
+    font-size: 20px;
+}
+
+h3{
+    font-size: 16px;
+}
+
+/** Buttons*/
 .ButtonBlueFilled {
     border-radius: 10px;
     background-color: var(--GlobalBlue);
