sidebar color via standard.css

--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -6,7 +6,7 @@
 
 .sidebar {
   width: var(--sidebar-w);
-  background: var(--globalBlue);
+  background: var(--GlobalBlue);
   box-shadow: 0 0 4px rgba(0,0,0,0.1);
   display: flex;
   flex-direction: column;
