add start animation

--- a/style/login.css
+++ b/style/login.css
@@ -1,27 +1,46 @@
 /* CSS for logo-animation */
-
 #logo-animation {
+  position: fixed;
+  inset: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   background-color: var(--GlobalBackgroundWhite);
+  animation: bgFade 900ms linear forwards;
+  pointer-events: none;
+  z-index: 100;
 }
 
+#logo-animation img {
+  height: 330px;
+  animation: logoMove 900ms ease-in-out forwards;
+}
+
+@keyframes bgFade {
+  to {
+    background-color: transparent;
+  }
+}
+
+@keyframes logoMove {
+  to {
+    height: 120px;
+     translate: calc(-50vw + 80px + 49px) calc(-50vh + 80px + 60px);
+  }
+}
+
+
 #content {
-  background-color: blue;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 /* CSS for login-site */
 body {
+  margin: 0;
   background-color: var(--GlobalBackgroundWhite);
   font-family: inter;
-}
-
-@font-face {
-  font-family: inter;
-  font-weight: 700;
-  src: url('../assets/fonts/Inter/static/Inter_18pt-Bold.ttf') format('truetype');
 }
 
 h1 {
@@ -33,6 +52,7 @@ h1 {
 }
 
 .login-main-container {
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,14 +60,10 @@ h1 {
 
 .login-nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 48px;
-  text-align: center;
-}
-
-.login-logo {
-  height: 100px;
-  margin-right: 8px;
+  margin-top: 22px;
+  margin-right: 22px;
 }
 
 .visuallyhidden {
@@ -63,7 +79,6 @@ h1 {
 
 .login-new-user-container {
   display: flex;
-  justify-content: center;
   align-items: center;
   gap: 16px;
 }
@@ -146,3 +161,4 @@ h1 {
   padding: 8px;
   color: #a8a8a8;
 }
+
